--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1089,7 +1089,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "#do cross validation with x and y\n",
+    "#return the score of the model\n",
+    "def cross_validation(x, y):\n",
+    "    r = Ridge()\n",
+    "    return cross_val_score(r, x, y, cv = 5).mean()\n",
+    "\n",
+    "#split the data into training data and test data and do cross validation\n",
+    "#print the correlation of the prediction and the target with training data and test data\n",
+    "def correlation(x, y):\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2)\n",
+    "    r = Ridge()\n",
+    "    r.fit(x_train, y_train)\n",
+    "    print(r.score(x_train, y_train))\n",
+    "    print(r.score(x_test, y_test))\n",
+    "    return r.predict(x_test).corr(y_test)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
