--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1107,9 +1107,23 @@
     "    r.fit(x_train, y_train)\n",
     "    print(r.score(x_train, y_train))\n",
     "    print(r.score(x_test, y_test))\n",
-    "    return r.predict(x_test).corr(y_test)\n",
+    "    return np.corrcoef(r.predict(x_test), y_test)[0, 1]\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(\"parameters.json\", \"a\") as f:\n",
+    "    json.dump({'ukeys': ukeys}, f)\n",
+    "    json.dump({'ukeys_mean': ukeys_mean, 'ukeys_std': ukeys_std}, f)\n",
+    "    json.dump({'target_mean': target_mean, 'target_std': target_std}, f)\n",
+    "    json.dump({'start_date': start_date, 'end_date': end_date}, f)"
    ]
   }
  ],
