--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1125,6 +1125,100 @@
     "    json.dump({'target_mean': target_mean, 'target_std': target_std}, f)\n",
     "    json.dump({'start_date': start_date, 'end_date': end_date}, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#split the data into training data and test data and do cross validation\n",
+    "def split_data(data, target, days, cv = 5):\n",
+    "    #cross validation = cv\n",
+    "    #split the data into chunks\n",
+    "    chunk_size = int(len(data) / cv)\n",
+    "    #generate the 5 training data and 5 test data\n",
+    "    #each training data is the data except the corresponding chunk\n",
+    "    #each test data is the corresponding chunk\n",
+    "    training_data = []\n",
+    "    test_data = []\n",
+    "    training_target = []\n",
+    "    test_target = []\n",
+    "    training_days = []\n",
+    "    test_days = []\n",
+    "    for i in range(cv):\n",
+    "        training_data.append(data.drop(data.index[i * chunk_size : (i + 1) * chunk_size]))\n",
+    "        test_data.append(data[i * chunk_size : (i + 1) * chunk_size])\n",
+    "        training_target.append(target.drop(target.index[i * chunk_size : (i + 1) * chunk_size]))\n",
+    "        test_target.append(target[i * chunk_size : (i + 1) * chunk_size])\n",
+    "        training_days.append(days.drop(days.index[i * chunk_size : (i + 1) * chunk_size]))\n",
+    "        test_days.append(days[i * chunk_size : (i + 1) * chunk_size])\n",
+    "    return training_data, test_data, training_target, test_target, training_days, test_days\n",
+    "\n",
+    "from tools import groupbyday, sharpeyear\n",
+    "\n",
+    "def scores(pred, target, days):\n",
+    "    pred_group, ground_group, corr = groupbyday(pred, target, days)\n",
+    "    sharpes = sharpeyear(corr, list(pred_group.keys()))\n",
+    "    return corr.mean(), sharpes\n",
+    "    \n",
+    "def fitmodel(model, training_data, test_data, training_target, test_target, training_days, test_days):\n",
+    "    for train, test, train_target, test_target, train_day, test_day in zip(training_data, test_data, training_target, test_target, training_days, test_days):\n",
+    "        model.fit(train, train_target)\n",
+    "        pred_train = model.predict(train)\n",
+    "        pred_test = model.predict(test)\n",
+    "        pnl_train, sharpe_train = scores(pred_train, train_target,train_day)\n",
+    "        pnl_test, sharpe_test = scores(pred_test, test_target, test_day)\n",
+    "        return pnl_train, sharpe_train, pnl_test, sharpe_test\n",
+    "\n",
+    "#try models with different parameters with features and target\n",
+    "#return the score of each model\n",
+    "def trymodels(model, features, target, days):\n",
+    "    #features is the training data\n",
+    "    #target is the target data\n",
+    "    #return the score of each model\n",
+    "    #model is the model to try\n",
+    "    training_data, test_data, training_target, test_target, training_days, test_days = split_data(features, target, days)\n",
+    "    return fitmodel(model, training_data, test_data, training_target, test_target, training_days, test_days)\n",
+    "import numpy as np\n",
+    "#try models with different parameters with features and target\n",
+    "#write the result to the file\n",
+    "def trymodelsfile(model, features, target, days, filename):\n",
+    "    #features is the training data\n",
+    "    #target is the target data\n",
+    "    #return the score of each model\n",
+    "    #model is the model to try\n",
+    "    training_data, test_data, training_target, test_target, training_days, test_days = split_data(features, target, days)\n",
+    "    pnl_trains = []\n",
+    "    sharpe_trains = []\n",
+    "    pnl_tests = []\n",
+    "    sharpe_tests = []\n",
+    "  \n",
+    "    for train, test, train_target, test_target, train_day, test_day in zip(training_data, test_data, training_target, test_target, training_days, test_days):\n",
+    "        pnl_train, sharpe_train, pnl_test, sharpe_test = fitmodel(model, train, test, train_target, test_target, train_day, test_day)\n",
+    "        pnl_trains.append(pnl_train)\n",
+    "        sharpe_trains.append(np.mean(sharpe_train))\n",
+    "        pnl_tests.append(pnl_test)\n",
+    "        sharpe_tests.append(np.mean(sharpe_test))\n",
+    "\n",
+    "    with open(filename, 'a') as f:\n",
+    "        f.write('pnl_train: ' + str(np.mean(pnl_trains)) + '\\n')\n",
+    "        f.write('sharpe_train: ' + str(np.mean(sharpe_trains)) + '\\n')\n",
+    "        f.write('pnl_test: ' + str(np.mean(pnl_tests)) + '\\n')\n",
+    "        f.write('sharpe_test: ' + str(np.mean(sharpe_tests)) + '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rff import RFFRidgeRegression\n",
+    "for i in range(10):\n",
+    "    trymodelsfile(RFFRidgeRegression(rff_dim = 2 ** i), features, target, days, str(i) + 'rff.txt')\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
