--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1140,6 +1140,12 @@
     "    #generate the 5 training data and 5 test data\n",
     "    #each training data is the data except the corresponding chunk\n",
     "    #each test data is the corresponding chunk\n",
+    "    #permute the data with the same permutation\n",
+    "    permute = np.random.permutation(len(data))\n",
+    "    data = data.iloc[permute]\n",
+    "    target = target.iloc[permute]\n",
+    "    days = days.iloc[permute]\n",
+    "\n",
     "    training_data = []\n",
     "    test_data = []\n",
     "    training_target = []\n",
