--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1159,6 +1159,13 @@
     "        test_target.append(target[i * chunk_size : (i + 1) * chunk_size])\n",
     "        training_days.append(days.drop(days.index[i * chunk_size : (i + 1) * chunk_size]))\n",
     "        test_days.append(days[i * chunk_size : (i + 1) * chunk_size])\n",
+    "    \n",
+    "    np.save('training_data.npy', training_data)\n",
+    "    np.save('test_data.npy', test_data)\n",
+    "    np.save('training_target.npy', training_target)\n",
+    "    np.save('test_target.npy', test_target)\n",
+    "    np.save('training_days.npy', training_days)\n",
+    "    np.save('test_days.npy', test_days)\n",
     "    return training_data, test_data, training_target, test_target, training_days, test_days\n",
     "\n",
     "from tools import groupbyday, sharpeyear\n",
