--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1230,7 +1230,13 @@
     "from rff import RFFRidgeRegression\n",
     "for i in range(10):\n",
     "    trymodelsfile(RFFRidgeRegression(rff_dim = 2 ** i), features, target, days, str(i) + 'rff.txt')\n",
-    "    "
+    "    \n",
+    "traing_data = np.load(load_my_directory + 'training_data_' + str(t) + '.npy')\n",
+    "test_data = np.load(load_my_directory + 'test_data_' + str(t) + '.npy')\n",
+    "training_target = np.load(load_my_directory + 'training_target_' + str(t) + '.npy')\n",
+    "test_target = np.load(load_my_directory + 'test_target_' + str(t) + '.npy')\n",
+    "training_days = np.load(load_my_directory + 'training_days_' + str(t) + '.npy')\n",
+    "test_days = np.load(load_my_directory + 'test_days_' + str(t) + '.npy')\n"
    ]
   }
  ],
