--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1160,12 +1160,27 @@
     "        training_days.append(days.drop(days.index[i * chunk_size : (i + 1) * chunk_size]))\n",
     "        test_days.append(days[i * chunk_size : (i + 1) * chunk_size])\n",
     "    \n",
-    "    np.save('training_data.npy', training_data)\n",
-    "    np.save('test_data.npy', test_data)\n",
-    "    np.save('training_target.npy', training_target)\n",
-    "    np.save('test_target.npy', test_target)\n",
-    "    np.save('training_days.npy', training_days)\n",
-    "    np.save('test_days.npy', test_days)\n",
+    "    # np.save('training_data.npy', training_data)\n",
+    "    # np.save('test_data.npy', test_data)\n",
+    "    # np.save('training_target.npy', training_target)\n",
+    "    # np.save('test_target.npy', test_target)\n",
+    "    # np.save('training_days.npy', training_days)\n",
+    "    # np.save('test_days.npy', test_days)\n",
+    "    #save all to pickle\n",
+    "    import pickle\n",
+    "    with open('training_data.pkl', 'wb') as f:\n",
+    "        pickle.dump(training_data, f)\n",
+    "    with open('testing_data.pkl', 'wb') as f:\n",
+    "        pickle.dump(testing_data, f)\n",
+    "    with open('training_target.pkl', 'wb') as f:\n",
+    "        pickle.dump(training_target, f)\n",
+    "    with open('testing_target.pkl', 'wb') as f:\n",
+    "        pickle.dump(testing_target, f)\n",
+    "    with open('training_days.pkl', 'wb') as f:\n",
+    "        pickle.dump(training_days, f)\n",
+    "    with open('testing_days.pkl', 'wb') as f:\n",
+    "        pickle.dump(testing_days, f)\n",
+    "\n",
     "    return training_data, test_data, training_target, test_target, training_days, test_days\n",
     "\n",
     "from tools import groupbyday, sharpeyear\n",
