--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1245,13 +1245,21 @@
     "from rff import RFFRidgeRegression\n",
     "for i in range(10):\n",
     "    trymodelsfile(RFFRidgeRegression(rff_dim = 2 ** i), features, target, days, str(i) + 'rff.txt')\n",
-    "    \n",
-    "traing_data = np.load(load_my_directory + 'training_data_' + str(t) + '.npy')\n",
-    "test_data = np.load(load_my_directory + 'test_data_' + str(t) + '.npy')\n",
-    "training_target = np.load(load_my_directory + 'training_target_' + str(t) + '.npy')\n",
-    "test_target = np.load(load_my_directory + 'test_target_' + str(t) + '.npy')\n",
-    "training_days = np.load(load_my_directory + 'training_days_' + str(t) + '.npy')\n",
-    "test_days = np.load(load_my_directory + 'test_days_' + str(t) + '.npy')\n"
+    "\n",
+    "#load from pickle\n",
+    "import pickle\n",
+    "with open('training_data.pkl', 'rb') as f:\n",
+    "    training_data = pickle.load(f)\n",
+    "with open('testing_data.pkl', 'rb') as f:\n",
+    "    testing_data = pickle.load(f)\n",
+    "with open('training_target.pkl', 'rb') as f:\n",
+    "    training_target = pickle.load(f)\n",
+    "with open('testing_target.pkl', 'rb') as f:\n",
+    "    testing_target = pickle.load(f)\n",
+    "with open('training_days.pkl', 'rb') as f:\n",
+    "    training_days = pickle.load(f)\n",
+    "with open('testing_days.pkl', 'rb') as f:\n",
+    "    testing_days = pickle.load(f)s\n"
    ]
   }
  ],
