--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1397,7 +1397,54 @@
     "    data = data.copy()\n",
     "    data = data.iloc[[0] * 240].append(data).append(data.iloc[[-1] * 240])\n",
     "    return data\n",
-    "add240(data)"
+    "add240(data)\n",
+    "#fill the Nan with the 0\n",
+    "def fillna(data):\n",
+    "    data = data.copy()\n",
+    "    data = data.fillna(0)\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate(filenames):\n",
+    "    #read each file in filenames, pd.concat them and calculate the mean\n",
+    "    #return the mean\n",
+    "    data = pd.DataFrame()\n",
+    "    #use pd.concat\n",
+    "    for filename in filenames:\n",
+    "        data = pd.concat([data, pd.read_csv(filename, index_col = 'date')])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plot the values of the data\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.plot(data.values)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test the model with simple data\n",
+    "X = np.random.normal(size = (100, 10))\n",
+    "y = np.random.normal(size = 100)\n",
+    "model = RFFRidgeRegression(rff_dim = 10)\n",
+    "model.fit(X, y)\n",
+    "model.predict(X)\n"
    ]
   }
  ],
