--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1446,6 +1446,33 @@
     "model.fit(X, y)\n",
     "model.predict(X)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# >>> from sklearn.datasets import make_friedman2\n",
+    "# >>> from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "# >>> from sklearn.gaussian_process.kernels import DotProduct, WhiteKernel\n",
+    "# >>> X, y = make_friedman2(n_samples=500, noise=0, random_state=0)\n",
+    "# >>> kernel = DotProduct() + WhiteKernel()\n",
+    "# >>> gpr = GaussianProcessRegressor(kernel=kernel,\n",
+    "# ...         random_state=0).fit(X, y)\n",
+    "# >>> gpr.score(X, y)\n",
+    "# 0.3680...\n",
+    "# >>> gpr.predict(X[:2,:], return_std=True)\n",
+    "# (array([653.0..., 592.1...]), array([316.6..., 316.6...]))\n",
+    "\n",
+    "#do guassian process regression\n",
+    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "from sklearn.gaussian_process.kernels import DotProduct, WhiteKernel\n",
+    "kernel = DotProduct() + WhiteKernel()\n",
+    "gpr = GaussianProcessRegressor(kernel = kernel, random_state = 0).fit(X, y)\n",
+    "gpr.score(X, y)\n",
+    "gpr.predict(X)-y"
+   ]
   }
  ],
  "metadata": {
