--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1473,6 +1473,26 @@
     "gpr.score(X, y)\n",
     "gpr.predict(X)-y"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#construct the a Gaussian kernel with X, dim samples * features\n",
+    "def GaussianKernel(X):\n",
+    "    #X is a np.array\n",
+    "    #return the Gaussian kernel of X\n",
+    "    #the Gaussian kernel is a np.array with shape (dim, dim)\n",
+    "    #the Gaussian kernel is the Gaussian distance of each pair of samples\n",
+    "    #the Gaussian distance of two samples is the Gaussian distance of their features\n",
+    "\n",
+    "    kernel = np.zeros((len(X), len(X)))\n",
+    "    for i in range(len(X)):\n",
+    "        for j in range(len(X)):\n",
+    "            kernel[i, j] = np.exp(-np.sum((X[i] - X[j]) ** 2))\n"
+   ]
   }
  ],
  "metadata": {
