--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1508,26 +1508,22 @@
     "    #X is a np.array with shape (samples)\n",
     "    #Y is a np.array with shape (samples)\n",
     "    #the x label is the quantile of X\n",
-    "    #the y label is the quantile of Y\n",
-    "    #average the pairs of X,Y within the same grid of quantile\n",
+    "    #plot the error bar of Y\n",
     "\n",
     "    #the quantile of X\n",
     "    X_quantile = np.quantile(X, np.linspace(0, 1, quantile))\n",
-    "    #the quantile of Y\n",
-    "    Y_quantile = np.quantile(Y, np.linspace(0, 1, quantile))\n",
     "\n",
     "    #cat X,Y into a dataframe\n",
     "    data = pd.DataFrame({'X': X, 'Y': Y})\n",
     "    #add a column of quantile of X\n",
     "    data['X_quantile'] = pd.cut(data['X'], X_quantile)\n",
-    "    #add a column of quantile of Y\n",
-    "    data['Y_quantile'] = pd.cut(data['Y'], Y_quantile)\n",
-    "    #group by the quantile of X and Y\n",
-    "    data = data.groupby(['X_quantile', 'Y_quantile']).mean()\n",
-    "    print(data)\n",
-    "    #plot the data\n",
-    "    plt.scatter(data['X'], data['Y'])\n",
+    "    #group by the quantile of X\n",
+    "    data = data.groupby('X_quantile').mean()\n",
+    "    #plot the error bar of Y\n",
+    "    plt.errorbar(data.index, data['Y'], yerr = data['Y'].std())\n",
     "    plt.show()\n",
+    "    \n",
+    "\n",
     "    \n"
    ]
   },
