--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1698,7 +1698,16 @@
     }
    ],
    "source": [
-    "data"
+    "#sort the days, and record the index of the sorted days\n",
+    "def sortdays(days):\n",
+    "    #days is a np.array with shape (samples)\n",
+    "    #change days to a pd.Series\n",
+    "    days = pd.Series(days)\n",
+    "    #sort the days\n",
+    "    days = days.sort_values()\n",
+    "    #record the index of the sorted days\n",
+    "    index = days.index\n",
+    "    return days, index\n"
    ]
   }
  ],
