--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1712,185 +1712,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.13"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#test corrcoef\n",
-    "a = np.random.normal(size = (100))\n",
-    "b = np.random.normal(size = (100))\n",
-    "\n",
-    "b = b\n",
-    "np.corrcoef(a, b)[0, 1]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.037415583951506605"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum(a*b)/np.sqrt(sum(a**2)*sum(b**2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.037415583951506584"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum(a*b)/ np.linalg.norm(a) / np.linalg.norm(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#change the string in the dataframe to float\n",
-    "def str2float(data):\n",
-    "    #data is a pd.DataFrame\n",
-    "    #change the string in the dataframe to number\n",
-    "    #return the dataframe\n",
-    "    for col in data.columns:\n",
-    "        data[col] = data[col].apply(lambda x: float(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>a</th>\n",
-       "      <th>b</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   a  b\n",
-       "0  1  4\n",
-       "1  2  5\n",
-       "2  3  6"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#pd dataframe select two columns\n",
-    "data = pd.DataFrame({'a': [1, 2, 3], 'b': [4, 5, 6], 'c': [7, 8, 9]})\n",
-    "data[['a', 'b']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#set the default output to be rounded to 4 digits\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.13"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%precision %.2f\n",
-    "np.set_printoptions(precision = 4)\n",
-    "np.corrcoef(a, b)[0, 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 90,
    "metadata": {},
    "outputs": [
@@ -1906,8 +1727,91 @@
     }
    ],
    "source": [
-    "#predict the price with the previous prediction\n",
-    "#pred1, pred2 are the prediction of the price"
+    "#predict the price with the previous prediction with linear regression\n",
+    "#preds are the list of predictions of the price, ground1 are the ground truth of the price\n",
+    "#return the prediction of the price\n",
+    "def predict(preds, ground):\n",
+    "    #preds is a list of predictions of the price\n",
+    "    #ground is the ground truth of the price\n",
+    "    #return the prediction of the price\n",
+    "    #use Ridge regression to predict the price\n",
+    "    #use five fold cross validation to predict the price\n",
+    "    train = []\n",
+    "    test = []\n",
+    "    train_target = []\n",
+    "    test_target = []\n",
+    "    for i in range(5):\n",
+    "        train.append(preds[: -1])\n",
+    "        test.append(preds[-1])\n",
+    "        train_target.append(ground[: -1])\n",
+    "        test_target.append(ground[-1])\n",
+    "        preds = preds[1:]\n",
+    "        ground = ground[1:]\n",
+    "    #use Ridge regression to predict the price\n",
+    "    r = Ridge()\n",
+    "    r.fit(train, train_target)\n",
+    "    return r.predict(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#generate training data which is the DD.volBuy - DD.volSell\n",
+    "def get_Buy_Sell(data):\n",
+    "    #data is a pd.DataFrame\n",
+    "    #return the training data\n",
+    "    #the training data is the DD.volBuy - DD.volSell 1 min ago\n",
+    "    return data['DD.volBuy'] - data['DD.volSell']\n",
+    "#generate training data which is the DD.askSize - DD.bidSize\n",
+    "def get_ask_bid(data):\n",
+    "    #data is a pd.DataFrame\n",
+    "    #return the training data\n",
+    "    #the training data is the DD.askSize - DD.bidSize 1 min ago\n",
+    "    return data['DD.askSize'] - data['DD.bidSize']\n",
+    "def gen_training_data(date, ukey, period, features):\n",
+    "    #date: the date of the data\n",
+    "    #ukey: the unique key of the data\n",
+    "    #period: a list, each element is how many minutes of the data previous to use\n",
+    "    #features: a list, each element is a function to generate the features\n",
+    "    #return: the training data with the features\n",
+    "    #load the data  \n",
+    "    data = load_ukey(date, ukey)\n",
+    "    #the data is in the format of pandas dataframe, with the columns of msymbol_ukey, date, interval and all the features\n",
+    "    #each row is a minute data\n",
+    "\n",
+    "    #DD.isActive is whether the market is active, if the target time is not active or the current time is not active, the target is nan\n",
+    "\n",
+    "    for j in features:\n",
+    "        data['feature' + j.__name__ ] = j(data)\n",
+    "    #use the last period minutes data to predict the price for each target\n",
+    "    for i in period:\n",
+    "        for col in data.columns:\n",
+    "            if col.startswith('feature'):\n",
+    "                data[col + '_shift_' + str(i)] = data[col].shift(i)\n",
+    "\n",
+    "    #the training data is the last period minutes data only select DD.isActive == 1\n",
+    "    training_data = data[[col + '_shift_' + str(i) for i in period for col in data.columns if col.startswith('feature')]]\n",
+    "    training_data = training_data[data['DD.isActive'] == 1]\n",
+    "    return training_data\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#the correlation of ask_bid shift 1 and ask_bid shift 2\n",
+    "ask_bid_1 = get_ask_bid(data).shift(1)\n",
+    "#fill the Nan with 0\n",
+    "ask_bid_1 = ask_bid_1.fillna(0)\n",
+    "#fill inf or  with 0\n",
+    "ask_bid_1 = ask_bid_1.replace(np.inf, 0)"
    ]
   }
  ],
