--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1760,17 +1760,27 @@
    "outputs": [],
    "source": [
     "#generate training data which is the DD.volBuy - DD.volSell\n",
-    "def get_Buy_Sell(data):\n",
+    "def get_Buy_Sell(data, i):\n",
     "    #data is a pd.DataFrame\n",
     "    #return the training data\n",
-    "    #the training data is the DD.volBuy - DD.volSell 1 min ago\n",
-    "    return data['DD.volBuy'] - data['DD.volSell']\n",
+    "    #the training data is the sum of the DD.volBuy - DD.volSell 1-i min ago\n",
+    "    buy_sell = 0\n",
+    "    for j in range(1, i + 1):\n",
+    "        buy_sell += data['DD.volBuy'].shift(j).fillna(0) - data['DD.volSell'].shift(j).fillna(0)\n",
+    "    return buy_sell\n",
     "#generate training data which is the DD.askSize - DD.bidSize\n",
-    "def get_ask_bid(data):\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_ask_bid(data, i):\n",
     "    #data is a pd.DataFrame\n",
     "    #return the training data\n",
-    "    #the training data is the DD.askSize - DD.bidSize 1 min ago\n",
-    "    return data['DD.askSize'] - data['DD.bidSize']\n",
+    "    #the training data is the sum of the DD.askSize - DD.bidSize 1-i min ago\n",
+    "    ask_bid = 0\n",
+    "    for j in range(1, i + 1):\n",
+    "        ask_bid += data['DD.askSize'].shift(j).fillna(0) - data['DD.bidSize'].shift(j).fillna(0)\n",
+    "    return ask_bid\n",
+    "\n",
     "def gen_training_data(date, ukey, period, features):\n",
     "    #date: the date of the data\n",
     "    #ukey: the unique key of the data\n",
@@ -1784,20 +1794,15 @@
     "\n",
     "    #DD.isActive is whether the market is active, if the target time is not active or the current time is not active, the target is nan\n",
     "\n",
-    "    for j in features:\n",
-    "        data['feature' + j.__name__ ] = j(data)\n",
-    "    #use the last period minutes data to predict the price for each target\n",
     "    for i in period:\n",
-    "        for col in data.columns:\n",
-    "            if col.startswith('feature'):\n",
-    "                data[col + '_shift_' + str(i)] = data[col].shift(i)\n",
+    "        for feature in features:\n",
+    "            data['feature_' + feature.__name__ + '_shift_' + str(i)] = feature(data, i)\n",
     "\n",
     "    #the training data is the last period minutes data only select DD.isActive == 1\n",
-    "    training_data = data[[col + '_shift_' + str(i) for i in period for col in data.columns if col.startswith('feature')]]\n",
-    "    training_data = training_data[data['DD.isActive'] == 1]\n",
-    "    return training_data\n",
     "\n",
-    "\n"
+    "    training_data = data[[col for col in data.columns if 'shift' in col]]\n",
+    "    training_data = training_data[data['DD.isActive'] == 1]\n",
+    "    return training_data\n"
    ]
   },
   {
