--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1770,7 +1770,23 @@
     "    return buy_sell\n",
     "#generate training data which is the DD.askSize - DD.bidSize\n",
     "\n",
+    "def get_vol_left(data, i):\n",
+    "    #data is a pd.DataFrame\n",
+    "    #return the training data\n",
+    "    #the training data is the sum of the DD.vol - DD.volBuy - DD.volSell 1-i min ago\n",
+    "    vol_left = 0\n",
+    "    for j in range(1, i + 1):\n",
+    "        vol_left += data['DD.vol'].shift(j).fillna(0) - data['DD.volBuy'].shift(j).fillna(0) - data['DD.volSell'].shift(j).fillna(0)\n",
+    "    return vol_left\n",
     "\n",
+    "def get_vol(data, i):\n",
+    "    #data is a pd.DataFrame\n",
+    "    #return the training data\n",
+    "    #the training data is the sum of the DD.vol 1-i min ago\n",
+    "    vol = 0\n",
+    "    for j in range(1, i + 1):\n",
+    "        vol += data['DD.vol'].shift(j).fillna(0)\n",
+    "    return vol\n",
     "\n",
     "def get_ask_bid(data, i):\n",
     "    #data is a pd.DataFrame\n",
