--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -1834,6 +1834,124 @@
     "#fill inf or  with 0\n",
     "ask_bid_1 = ask_bid_1.replace(np.inf, 0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cap the abs value of a dataframe\n",
+    "def cap(data, cap):\n",
+    "    #data is a dataframe\n",
+    "    #cap is a number\n",
+    "    #return the dataframe with the value capped by cap\n",
+    "    data = data.copy()\n",
+    "    data[data > cap] = cap\n",
+    "    data[data < -cap] = -cap\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#weighted correlation\n",
+    "def weightedcorr(x, y, weight):\n",
+    "    #x is a np.array\n",
+    "    #y is a np.array\n",
+    "    #weight is a np.array\n",
+    "    #return the weighted correlation of x and y\n",
+    "    \n",
+    "    correlation = x @ weight @ y\n",
+    "    return correlation\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.23559346, -1.05423368,  0.66250638]),\n",
+       " array([ 1.03342503, -1.61121838,  1.13845457]),\n",
+       " array([-0.24346818,  1.69860068,  0.75423342]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.random.normal(size = 3)\n",
+    "y = np.random.normal(size = 3)\n",
+    "x, y, x * y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#model wrapper\n",
+    "class model_wrapper:\n",
+    "    def __init__(self, model, features):\n",
+    "        self.model = model\n",
+    "        self.features = features\n",
+    "    def fit(self, X, y):\n",
+    "        self.model.fit(X, y)\n",
+    "    def predict(self, X):\n",
+    "        return self.model.predict(X)\n",
+    "    def feature_selection(self, data):\n",
+    "        #data is a pd.DataFrame\n",
+    "        #return the selected features\n",
+    "        return data[self.features]\n",
+    "    \n",
+    "class feature_wrapper:\n",
+    "    def __init__(self, feature_functions, cutoff, mean, std):\n",
+    "        self.feature_functions = feature_functions\n",
+    "        self.cutoff = cutoff\n",
+    "        self.mean = mean\n",
+    "        self.std = std\n",
+    "    def get_feature(self, data):\n",
+    "        feature = pd.DataFrame()\n",
+    "        for i in self.feature_functions:\n",
+    "            feature[i] = self.feature_functions[i](data)\n",
+    "        return feature\n",
+    "    def cap(self, data):\n",
+    "        return cap(data, self.cutoff)\n",
+    "    def normalize(self, features, ukey):\n",
+    "        normf = features.copy()\n",
+    "        for col in features.columns:\n",
+    "            normf[col] = (features[col] - self.mean[col][ukey]) / self.std[col][ukey]\n",
+    "        return normf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
